--- a/mi_app/templates/index.html
+++ b/mi_app/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 
@@ -5,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motas</title>
-    <link rel="stylesheet" href="../static/CSS/style.css?v=2">
+<link rel="stylesheet" href="{% static 'CSS/style.css' %}?v=2">
 </head>
 
 <body>
