--- a/mi_app/templates/perfil.html
+++ b/mi_app/templates/perfil.html
@@ -84,10 +84,8 @@
         AGREGA UNA MASCOTA
     </button> 
 </form>
-{% if user.is_superuser %}
-    <a href="{% url 'admin' %}" class="btn btn-warning mt-2">Panel Administrativo</a>
-{% elif user.groups.filter(name="veterinario").exists %}
-    <a href="{% url 'admin' %}" class="btn btn-info mt-2">Panel Veterinario</a>
+{% if user.is_staff %}
+    <a href="/admin/" class="btn btn-warning mt-2">Panel administrativo</a>
 {% endif %}
 
 </body>
