--- a/staticfiles/CSS/perfil.css
+++ b/staticfiles/CSS/perfil.css
@@ -384,7 +384,6 @@ button {
     color: white;
     border: none;
     border-radius: 30px;
-    font-size: 1em;
     cursor: pointer;
     transition: background 0.3s ease;
     margin: auto;
@@ -394,4 +393,22 @@ button {
   
   .Agregar-mascota:hover {
     background: #3cdabd;
+  }
+  
+.Panel {
+    width: 30%;
+    padding: 10px;
+    background: #ff58e6;
+    color: white;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    margin: auto;
+    font-weight: bolder;
+    font-size: 1.4em;
+  }
+  
+  .Panel:hover {
+    background: #fa52e1;
   }
