Form cita 2 intento

--- a/mi_app/templates/perfil.html
+++ b/mi_app/templates/perfil.html
@@ -86,7 +86,7 @@
 </form>
 {% if user.is_staff %}
 <form action="{% url 'admin' %}" method="get" style="display: inline;">
-    <button class="Agregar-mascota">
+    <button class="Panel">
         PANEL ADMINISTRATIVO
     </button> 
 </form>
